<resources>
    <string name="app_name">InTask</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="facebook_app_id">912976482543539</string>
    <string name="fb_login_protocol_scheme">fb912976482543539</string>
    <string name="profile">Profile</string>
    <string name="restaurants">Ristoranti</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="create_new">Create a new account</string>
    <string name="login_account">Insert credentials</string>
    <string name="username">Username</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="register">Sign-in</string>
    <string name="login">Login</string>
    <string name="btn_change_image">Change profile image</string>
    <string name="num_of_ratings">Number of reviews</string>
    <string name="average_rating">Reviews mean</string>
    <string name="btn_add_friend">Add to friends</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_x">X</string>
    <string name="btn_view_profile">See profile</string>
    <string name="type_a_message">Write a message…</string>
    <string name="bottom_nav_message_string">Chats</string>
    <string name="bottom_nav_home_string">Publications</string>
    <string name="bottom_nav_publish_string">Publish</string>
    <string name="bottom_nav_published_string">Published</string>
    <string name="bottom_nav_profile_string">Profile</string>
    <string name="button_publish_job_string">I\'m looking for someone for a job</string>
    <string name="button_publish_title_string">WHAT DO YOU WANT TO PUBLISH?</string>
    <string name="button_pubilsh_time_string">I\'d like to work for someone</string>
    <string name="Giardinaggio">Gardening</string>
    <string name="Babysitting">Babysitting</string>
    <string name="Pulizie">Cleaning</string>
    <string name="Ripetizioni">Private lessons</string>
    <string name="Cucinare">Cooking</string>
    <string name="Trasloco">Moving</string>
    <string name="Riparazioni">Fixing stuff</string>
    <string name="Dogsitting">Dogsitting</string>
    <string name="Personal_Training">Personal Training</string>
    <string name="Supporto_informatico">It support</string>
    <string name="Trasporto">Transportation</string>
    <string name="Spesa">Grocery shopping</string>
    <string name="Calcetto">Soccer player</string>
    <string name="altro">Others</string>
    <string name="working_category">Pick the category</string>
    <string name="Price">How much would you offer for this job</string>
    <string name="descrizione">Description</string>
    <string name="foto_facoltativa">Picture (optional)</string>
    <string name="verificato">Accept only verified users</string>
    <string name="accetta_solo_se_verificato">Accept only verified users</string>
    <string name="titolo">Title</string>
    <string name="dicci_qualcosa_sul_lavoro_per_cui_ti_vuoi_proporre">What job do you want to propose yourself for?</string>
    <string name="quanto_puoi_allontanarti_dalla_tua_posizione">How far you can move from your position?</string>
    <string name="title_activity_pubblication_choice">PubblicationChoiceActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="che_lavoro_vuoi_proporre">What job do you want to publish?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="quando">When? (indicate date and time if needed)</string>
    <string name="facebook_sign_in">Sign In</string>
    <string name="inserisci_posizione_attuale">Insert current position</string>
    <string name="posizione">Position</string>
    <string name="salva_modifiche">Save changes</string>
    <string name="carica_documento">Load document</string>
    <string name="diventa_un_utente_verificato">Become a verified user!</string>
    <string name="expl_photo">Upload a photo of a valid document and wait a few days for the verification of one of our operators</string>
    <string name="immagine_documento_string">Document image:</string>
    <string name="utente_verificato">Verified user</string>
    <string name="modifica_documento">Change document</string>
    <string name="le_tue_offerte_di_lavoro">Your job offers</string>
    <string name="le_tue_disponibilit_a_lavorare">Your published skills</string>
    <string name="contatta_button">Contact</string>
    <string name="modifica_indirizzo">Change address</string>
    <string name="filtra_la_tua_ricerca_per">Filter by:</string>
    <string name="pers_training">Pers. Training</string>
    <string name="informatica">IT</string>
    <string name="calcetto">Soccer</string>
    <string name="retribuzione_minima">Minimum payment</string>
    <string name="filter">Filter</string>
    <string name="_20_00_24_00">20:00-23:59</string>
    <string name="_16_00_20_00">16:00-19:59</string>
    <string name="_14_00_16_00">14:00-15:59</string>
    <string name="_12_00_14_00">12:00-13:59</string>
    <string name="_10_00_12_00">10:00-11:59</string>
    <string name="_06_00_10_00">06:00-09:59</string>
    <string name="rating_minimo">Minimum rate</string>
    <string name="retribuzione_massima">Maximum payment</string>
    <string name="risultati_ricerca">Results:</string>
    <string name="cerca_tra_i_job">Look for job opportunities</string>
    <string name="le_tue_chat">Your chat</string>
    <string name="ufficializza">formalize</string>
    <string name="organizza">Organize</string>
    <string name="per_quale_annuncio">For which announcement?</string>
    <string name="invia_proposta">Send organization</string>
    <string name="name_surname">Name Surname</string>
    <string name="limite_massimo_distanza_da_te_nella_ricerca">Maximum distance from you</string>
    <string name="conferma_valutazione">Send evaluation</string>
    <string name="u2022_consiglieresti_ad_un_amico_di_collaborare_con_questo_utente">•  Would you recommend a friend to collaborate with this user</string>
    <string name="u2022_l_utente_si_dimostrato_affidabile">•  The user proved to be reliable</string>
    <string name="u2022_l_utente_stato_preciso_e_puntuale">•  The user was accurate and punctual</string>
    <string name="ricordati_di_tenere_in_considerazione_se">You have some experiences to review!\nRemember to consider if:</string>
    <string name="u2022_l_utente_stato_di_parola">• The user was a man of his word</string>
    <string name="img_verified_upload_subj"> nuova foto documento caricata che richiede verifica</string>
    <string name="img_verified_upload_subj_user">Photo of document received!</string>
    <string name="img_verified_upload_corp"> ha caricato la mail per essere verificato</string>
    <string name="img_verified_upload_corp_user"> !\n\n\nWe have received the photo of your document\nOne of our operators will carry out a check.\n
We will notify you as soon as the check is finished and you have become a verified user!\n\n\n\nBest regards,\nInTask team."</string>
    <string name="welcome_message_corp">"!\n\n\nWelcome in the inTask family!\n\nYour registration was successful.\n\n\n\nBest regards,\nInTask team."</string>
    <string name="welcome_message_init">Hi </string>
    <string name="fascia_oraria">Hours</string>
    <string name="la_tua_ricerca_non_ha_prodotto_risultati">Your search has produced no results.</string>
    <string name="cerca_tra_i_time">"Look for proposals form our professionals "</string>
    <string name="archiviato">Completed</string>
    <string name="in_trattativa">In negotiation</string>
    <string name="disponibile">Available</string>
    <string name="devi_verificare_l_account_prima_di_contattare_questo_utente">Your account must be verified to contact this user! \nGo to your profile</string>
    <string name="proposta_accettata">Accepted</string>
    <string name="proposta_rifiutata">Rejected</string>
    <string name="valuta_da_1_a_5_la_tua_esperienza_con">Rate, in a 1 to 5 range, your experience with </string>
    <string name="relativa_al_lavoro">" related to the job "</string>
    <string name="utente_valutato_correttamente">User rated correctly!</string>
    <string name="elimina">Delete</string>
    <string name="accendi_gps">allow GPS access</string>
    <string name="indirizzo_non_trovato">Address not found</string>
    <string name="annuncio_pubblicato_con_successo">Published</string>
    <string name="riempi_tutti_i_campi_correttamente">Fill all fields correctly</string>
    <string name="inserire_orario_corretto">Insert hour in format hh:mm</string>
    <string name="utente_non_verificato">User verified</string>
    <string name="scegli_quali_annunci_cercare">Publications you want to look for</string>
    <string name="i_nostri_professionisti">Our professionals</string>
    <string name="le_offerte_di_lavoro">Job offers</string>
    <string name="riempi_il_campo">Fill field!</string>
    <string name="indirizzo_modificato">Address modified!</string>
    <string name="in_attesa_di_verifica">Waiting for verification</string>
    <string name="disponibilit_a_lavorare">Published skills</string>
    <string name="autenticazione_fallita">"Authentication failed"</string>
    <string name="mail_esistentte">The e-mail address is already in use</string>
    <string name="lunghezza_password">Password has to be at least 8 characters long!</string>
    <string name="no_spazi">No spaces allowed!</string>
    <string name="no_em_or_password_allowrd">You can\'t register with this email/password</string>
    <string name="Errore_nella_registrazione">Something went wrong during registration phase</string>
    <string name="successo_registrazione">Registration succeeded</string>
    <string name="nuovo_messaggio_da">New message from </string>
    <string name="proposta_per">would like to organize </string>
    <string name="in_data">the day </string>
    <string name="ora">at </string>
    <string name="oppure">or</string>
    <string name="accetta">Accept</string>
    <string name="rifiuta">Reject</string>
    <string name="benvenuto_nella_chat_di_intask">Welcome in inTask chat!</string>
    <string name="metti_d_accordo_con_gli_utenti_pianifica_data_e_ora_e_poi_ufficializza_il_vostro_appuntamento_cliccando_sul_bottone_organizza_invia_la_richiesta_o_attendi_che_ti_venga_inviata_accettala_e_il_gioco_fatto_n_potrai_valutare_la_tua_esperienza_e_l_utente_dopo_la_data_concordata_attraverso_la_tua_pagina_profilo_tuente">Plan the date and time with the user, and then formalize your appointment by clicking on the \'organize\' button.\nSend the request or wait for it to be sent to you, accept it and that\'s it!\nYou will be able to evaluate your experience and the user after the agreed date through your user profile page.</string>
    <string name="pubblicato_da">Published by</string>
    <string name="data_ora">Date, Time</string>
    <string name="categoria">Category:</string>
    <string name="indirizzo">Address:</string>
    <string name="stato_annuncio">State:</string>
    <string name="ore_necessarie_stimate">Hours approximately needed</string>
    <string name="data">Date</string>
    <string name="ora_">Time</string>
    <string name="disponibilit_a_muoversi">Possibility to get away from home:</string>
    <string name="mi_interessa_cercare">I\'m interested in</string>
    <string name="giorno_della_settimana">Day of the week</string>
    <string name="lun">Mon</string>
    <string name="mar">Tue</string>
    <string name="mer">Wed</string>
    <string name="gio">Thu</string>
    <string name="ven">Fri</string>
    <string name="sab">Sat</string>
    <string name="dom">Sun</string>
</resources>