<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chatapp.MainActivity" >

    <item android:id="@+id/search_restaurant"
        android:title="@string/restaurants"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/friends"
        android:title="@string/friends"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>