<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="22dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:shadowColor="#807B7B"
            android:text="@string/dicci_qualcosa_sul_lavoro_per_cui_ti_vuoi_proporre"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_create_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/titolo"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/edit_text_background"
            android:hint="Vorrei lavorare come..."
            android:minHeight="25dp"
            android:textSize="12dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_create_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/descrizione"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/edit_text_background"
            android:hint="Il lavoro può consisitere in..."
            android:minHeight="65dp"
            android:textSize="12dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_check_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/working_category"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_local_florist_24"
                android:text="@string/Giardinaggio" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_outline_child_friendly_24"
                android:text="@string/Babysitting" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_local_pizza_24"
                android:text="@string/Cucinare" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_outline_local_laundry_service_24"
                android:text="@string/Pulizie" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_menu_book_24"
                android:text="@string/Ripetizioni" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_local_shipping_24"
                android:text="@string/Trasloco" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_build_24"
                android:text="@string/Riparazioni" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_dog"
                android:text="@string/Dogsitting" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_fitness_center_24"
                android:text="@string/Personal_Training" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_computer_24"
                android:text="@string/Supporto_informatico" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_directions_car_24"
                android:text="@string/Trasporto" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_local_grocery_store_24"
                android:text="@string/Spesa" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_sports_soccer_24"
                android:text="@string/Calcetto" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_more_horiz_24"
                android:text="@string/altro" />



        </RadioGroup>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_add_location_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Posizione"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="Città, Nazione, CAP..."
            android:minHeight="25dp"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="n°"
                android:minHeight="25dp"
                android:textSize="12dp" />

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="Via..."
                android:minHeight="25dp"
                android:textSize="12dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/foto_facoltativa"
                android:layout_marginRight="40dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:src="@drawable/ic_baseline_landscape_24"
                android:layout_width="130dp"
                android:layout_height="155dp">

            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_access_time_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Quando?"
            android:textColor="#000000"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/edit_text_background"
                android:hint="Data.."
                android:minHeight="25dp"
                android:textSize="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/edit_text_background"
                android:hint="Ora.."
                android:minHeight="25dp"
                android:textSize="12dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_gps_not_fixed_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/quanto_puoi_allontanarti_dalla_tua_posizione"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:hint="0,00 km"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_check_24"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/verificato"
            android:textColor="#000000"
            android:textSize="16sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accetta_solo_se_verificato" />

        </RadioGroup>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:text="Pubblica"
            android:background="@drawable/custom_button">

        </Button>
    </LinearLayout>
</ScrollView>