<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/became_verified_user"
            style="@style/InTaskTheme_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/diventa_un_utente_verificato"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/became_verified_expl_user"
            style="@style/InTaskTheme_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/expl_photo"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/verified_photo_text_user"
                style="@style/InTaskTheme_ordinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/immagine_documento_string" />

            <ImageView
                android:layout_alignParentEnd="true"
                android:id="@+id/document_image"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="55dp"
                android:background="@drawable/edit_text_background"
                android:src="@drawable/ic_passport_svgrepo_com" />
        </RelativeLayout>
        <Button
            android:id="@+id/user_document_update"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/carica_documento"
            style="@style/InTaskTheme_ordinary">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>